--- a/DBapplication/DBapplication/DBapplication.vcxproj.filters
+++ b/DBapplication/DBapplication/DBapplication.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="src\DButils\CLprinter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\defines\clicolors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
