--- a/DBapplication/DBapplication/DBapplication.vcxproj.filters
+++ b/DBapplication/DBapplication/DBapplication.vcxproj.filters
@@ -21,6 +21,12 @@
     <ClCompile Include="src\DButils\CLprinter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\manager\DBmanager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\manager\dbhierarchy\Dbnode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\defines\coninfo.h">
@@ -33,6 +39,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\defines\clicolors.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\manager\DBmanager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\manager\dbhierarchy\Dbnode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
