--- a/DBapplication/DBapplication/DBapplication.vcxproj.filters
+++ b/DBapplication/DBapplication/DBapplication.vcxproj.filters
@@ -21,12 +21,6 @@
     <ClCompile Include="src\DButils\CLprinter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\manager\DBmanager.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\manager\dbhierarchy\Dbnode.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\defines\coninfo.h">
@@ -45,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\manager\dbhierarchy\Dbnode.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\DButils\DBpointers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
