--- a/DBapplication/DBapplication/DBapplication.vcxproj.filters
+++ b/DBapplication/DBapplication/DBapplication.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="src\manager\Pathfinder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\manager\queries\ParametrizedQuery.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
